--- a/zh_CN/config.json
+++ b/zh_CN/config.json
@@ -1,7 +1,7 @@
 {
-  "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+  "additionalFooterText": "All contents and images &copy; by sin_sin&nbsp;",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
-  "title": "Your wiki name",
+  "title": "sin_sin's Dashboard",
   "useSideMenu": true
 }
